[package]
name = "rustylasso"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.15", default-features = false, features = ["approx"] }
ndarray-linalg = { version = "0.14", optional = true }
ndarray-stats = "0.5.0"

num-traits = "0.2"
approx = "0.4"

rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4.2"

thiserror = "1.0"

[workspace]
members = ["python/"]
