[package]
name = "rust_sparseglm"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
ndarray = { version = "0.15", features = ["approx"]}
ndarray-stats = "0.5.0"

num-traits = "0.2"
approx = "0.4"

rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4.2"

thiserror = "1.0.30"
# Temporary fix for compatibility issue between intel-mkl-tool and anyhow (https://github.com/rust-math/intel-mkl-src/issues/68)
anyhow = { version = "<=1.0.48" }

[workspace]
members = ["python/"]
