[package]
name = "python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.4"
ndarray-stats = "0.5.0"
num = "0.4.0"
rand = "0.8.4"
rand_distr = "0.4.2"
RustyLasso = {"path" = "../"}

[dependencies.numpy]
version = "0.9.0"
features = ["python3"]

[dependencies.pyo3]
version = "0.14.4"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
