[package]
name = "sparseglm_solver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.4"
ndarray-stats = "0.5.0"
num = "0.4.0"
rand = "0.8.4"
rand_distr = "0.4.2"
rust-sparseglm = {"path" = "../"}

[dependencies.numpy]
version = "0.15.0"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]
